Fixed bottom spacing
Added a space at the bottom so the bottom elements are covered by the non-affiliation banner.

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -593,5 +593,8 @@ footer a:hover {
     text-align: center;
     font-size: 0.9em;
     color: rgb(175, 175, 175);
-    margin-bottom: 70px;
+}
+
+.space {
+    height: 60px;
 }
